correction Mobile2

--- a/css/style.css
+++ b/css/style.css
@@ -111,13 +111,13 @@ input:checked ~ .accordion-content {
 
 @media (max-width: 480px) {
   h1 {
-    margin-top: 0;
-    font-size: 2em;
+    
+    font-size: 2.8rem;
     text-align: center;
   }
 
   h2 {
-    font-size: 2.8rem;
+    font-size: 2.6rem;
   }
 }
 
@@ -131,6 +131,6 @@ input:checked ~ .accordion-content {
 }
 
 header {
-    height: 60px;
-    padding: 0 0 25px 0;
+    height: 70px;
+    padding: 20px;
 }
